<resources>
    <string name="app_name">আমাদের নাটোর</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nator_jela">নাটোর জেলা</string>
    <string name="rajshahi_bd">রাজশাহী, বাংলাদেশ</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ek_nojore_amader_nator">এক নজরে আমাদের নাটোর</string>
    <string name="about_natore">
        নাটোর রাজশাহী বিভাগের একটি জেলা। এটি বাংলাদেশে উত্তর দিকে অবস্থিত। এটি রাজশাহীর মেট্রোপলিটন শহর সীমানা এবং রাজশাহী জেলার অংশ হিসেবে ব্যবহৃত হয়।
        \n\n
        প্রথম নাটোরে একটি বিল (একটি বড় জলাশয়) ছিল যার নাম ছিল চৈঘাঙা। ১৭০৬ খ্রিস্টাব্দে রাজা রামজীবন রায়ের জন্মলগ্ন থেকেই তিনি রাজধানী স্থাপন করেন। ১৮২১
        পর্যন্ত নাটোর রাজশাহী জেলা কেন্দ্রীয় অফিস ছিল। ১৮৪৫ সালে নাটোর মহাকুম প্রতিষ্ঠিত হয়। নাটোর পৌরসভা ১৮৬২ সালে প্রতিষ্ঠিত হয়। ১৯৮৪ সালে নাটোর একটি
        পূর্ণবয়স্ক জেলা হয়ে ওঠে। ১৮৫৯ ও ১৮৬০ সালে এই জেলায় \'নীল প্রতিরোধ আন্দোলন\' সংঘটিত হয়।
        \n\n
        নাটোর জেলার অধিকাংশ অংশ সমভূমি জমি। নাটোর জেলার অংশে বাংলাদেশের বৃহত্তম বেল চালান বিল হচ্ছে।
        \n\n
        নাটোর জেলা (রাজশাহী বিভাগ) ১৮৯৬.০৫ বর্গ কিলোমিটার এলাকা নিয়ে গঠিত, এটি নওগাঁ ও বগুড়া জেলার উত্তরে, দক্ষিণে পাবনা ও কুষ্টিয়া জেলা, পশ্চিমে পাবনা এবং
        সিরাজগঞ্জ জেলার পশ্চিমে রাজশাহী জেলা। নাটোর থেকে ঢাকা পর্যন্ত দূরত্ব ২২0 কিলোমিটার। লালপুর বাংলাদেশের সর্বনিম্ন গড় বার্ষিক বৃষ্টিপাত।
    </string>
    <string name="jela_somporkrito">জেলা সম্পর্কিত</string>
    <string name="local_gov">স্থানীয় সরকার</string>
    <string name="photo_gallary">ফটো গ্যালারী</string>
    <string name="e_service">ই-সেবা</string>
    <string name="gov_office">সরকারি অফিসসমুহ</string>
    <string name="other_institute">অন্যান্য প্রতিষ্ঠান</string>
    <string name="map">মানচিত্র</string>
    <string name="action_call">Emergency Call</string>
    <string name="action_exit">Exit</string>
    <string name="jelar_potovumi">জেলার পটভূমি</string>
    <string name="upojela_o_union">উপজেলা ও ইউনিয়ন</string>
    <string name="jela_proshashoker_barta">জেলা প্রশাসকের বার্তা</string>
    <string name="tourist_place">দর্শনীও স্থান</string>
    <string name="lang_and_culture">ভাষা ও সংস্কৃতি</string>
    <string name="famous_persons">প্রখ্যাত ব্যক্তিত্ত্ব</string>
    <string name="natore_in_war">মুক্তিযুদ্ধে নাটোর</string>
    <string name="language1">নাটোরের লোকজ সংস্কৃতির ভান্ডার সমৃদ্ধ, বৈচিত্র্য অফুরন্ত। যে কোনো প্রাচীন জনপদ সচরাচর লোকসংস্কৃতিতে ধনী হয়ে থাকে। নাটোর জেলাও তার ব্যতিক্রম নয়।নাটোরের শহরাঞ্চলের ক্ষুদ্র গন্ডী পেরিয়ে গেলেই পাওয়া যায় লোকজ সংস্কৃতির বেগবান ধারার খোঁজ।
        \n\nঅন্যদিকে আছে লোকজ বা গ্রাম্য ধাঁধা যাকে নাটোরের কোনো কোনো অঞ্চলে \‘মান\’ বলা হয়।সাধারণ পল্লীবাসী মানুষকে মোটাবুদ্ধির বলে অবজ্ঞা করার যে স্বভাব আমাদের শহুরে পন্ডিতদের মধ্যে দৃশ্যমান, তার প্রকৃষ্ট প্রতিবাদ হচ্ছে পল্লীবাসী সাধারণ মানুষ কর্তৃক ধাঁধার সৃষ্টি। কোনো জিনিসকে বা বস্ত্তকে প্রত্যক্ষভাবে না বলে ধাঁধার মাধ্যমে প্রহেলিকা সৃষ্টি করে বলাটা একধরনের উচ্চাঙ্গের শিল্পসৃষ্টিও বটে।  নাটোর জেলার ধাঁধাসমূহ শিশু-কিশোরদের পাশাপাশি বড়দেরও বিমল আনন্দের সামগ্রী।মানুষের, বিশেষত শিশু-কিশোরদের বুদ্ধিবৃত্তির প্রখরতা বৃদ্ধি ও জ্ঞান অনুশীলনের প্রকৃষ্ট পন্থা। গ্রামাঞ্চলের মুরুব্বিরা সন্ধ্যায় সারাদিনের কর্মক্লান্ত দেহ এলিয়ে ছেলে-মেয়ে, নাতি-নাতনি নিয়ে দাওয়ায় বা উঠোনে সপ-পাটি-মাদুর বিছিয়ে শুয়ে-বসে ধাঁধা বা মান ভান্ডারের আসর বসান। যে বা যারাই এই ধাঁধাগুলির সৃষ্টি করুক না কেন, তাদের মেধা ও প্রত্যুৎপন্নমতিত্বের কথা ভাবলে মাথাটা শ্রদ্ধায় নত হয়ে আসে। চকিত বুদ্ধির ঝিলিক, পরস্পর সম্পৃক্ত বস্ত্তগুলির পারস্পরিক সম্পর্ক আর তীব্র কৌতূকের ঝলকানির সমন্বয় দেখা যায় এই ধাঁধাগুলিতে।  ধাঁধার পাশাপাশি নাটোর জেলার সর্বত্র লোকে মুখে মুখে অসংখ্য প্রবাদ-প্রবচন আউড়ে থাকে। এই প্রবাদ-প্রবচনে কৃষি, আবহাওয়া, সমাজতত্ত্ব, সামাজিক অবস্থাসহ জীবনের বিচিত্র অভিজ্ঞতার সারাৎসার উৎসারিত হয়েছে। সরদার আবদুল হামিদ লিখেছেন- ‘প্রবাদ প্রবচন লোকসাহিত্যের মূল্যবান সামগ্রী। সরস ছন্দবহ ভাবব্যঞ্জক বাক্য বা বাক্যসমষ্টিই প্রবাদ। অনুভূতিপ্রবণ মানবমনের অভিজ্ঞতা হতে প্রবাদের জন্ম। প্রবাদকে খন্ড জ্ঞানভান্ডার বলা চলে। এক একটি প্রবাদবাক্য হীরার টুকরার ন্যায় দামী। সাগরের বুকে যেমন মণি-মুক্তা লুকায়িত থাকে, তেমনি মানব মনের গহীনে যুগ যুগ ধরে সঞ্চিত হয় প্রবাদরূপ রত্নরাজি। প্রবাদের মাধ্যমে আমরা পেয়ে থাকি চিরন্তন জ্ঞানের কথা, অজানা রহস্যের কথা, আনন্দঘন হাস্যরস ও কৌতুকের কথা যা মনকে সাময়িক আনন্দে উৎফুল্ল করে তোলে। তাই প্রবাদ বাক্য যেমন আনন্দের খোরাক, তেমনই এর উপদেশমালা চিন্তার খোরাকও বটে। দেখা যায়, পল্লীর প্রবীণ লোকেরা কথায় কথায় প্রবাদ আওড়ান। এগুলো যেন তাদের রক্তের সাথে মিশে আছে। প্রাসঙ্গিক প্রয়োজনে তাদের মুখ দিয়ে স্বতঃস্ফুর্তভাবে বেরিয়ে আসে রাশি রাশি প্রবাদ বচন।স্থান-কাল-পাত্রভেদে কোথায় কোনটি প্রযোজ্য, অন্তর-ভান্ডার খুঁজে বের করতে তাদের আদৌ বেগ পেতে হয় না। (দ্রষ্টব্য: চলনবিলের লোকসাহিত্য। প্রকাশক- বাংলা একাডেমী, ঢাকা।)</string>
    <string name="madar_gan">নাটোর জেলার মাদার গান</string>
    <string name="madar_gan_des">মাদারের গান বা মাদার গান নাটোর জেলার নিজস্ব লোকসঙ্গীত হিসাবে পরিচিত। বাংলাদেশের অন্য কোনো অঞ্চলে এই গানের আসর বসলেও তা মূলত নাটোর জেলা থেকেই ধার করা।নাটোরের সর্বত্র মাদারগানের আসর ছিল একসময় নিত্য-নৈমিত্তিক ঘটনা। মাদারের গান বা মাদার পীরের গান অত্যন্ত জনপ্রিয় ছিল একসময়। যদিও মাদার পীর নামক কোনো পীরের দরগা বা মাজার নেই কোথাও, তবু মাদার পীরের নামে মানত বা মানসিক করার চল আছে জেলার সর্বত্র। বিশেষ করে নাটোর জেলা সদর ও চলনবিল অঞ্চলের বিভিন্ন গ্রামে। সন্তান কামনায়, রোগ-শোক থেকে নিরাময় কিংবা বিপদ থেকে উদ্ধারের আশায় লোকে মাদার পীরের নামে মানসিক করে। তারা পীরের দোহাই দিয়ে মানত করে যে বিপদ থেকে উদ্ধার পেলে মাদারেরর গানের আসর বসাবে। \n\n একসময় এই অঞ্চলের গ্রামে-গঞ্জে, হাটে-বাজারে, মাঠে-ময়দানে, উঠোনে-দাওয়ায় আসর বসতো মাদারগানের। পথে-প্রান্তরে প্রতিনিয়ত প্রতিধ্বনিত হতো মাদার গানের সুর। পথ চলতে, লাঙল দিতে, জমি নিড়াতে, গরু চরাতে- সর্বত্রই মানুষের গলা থেকে বের হত এই মাদার গানের ধূয়া। বিশেষ করে আসর বসতো মহর রমের চাঁদ উঠলে, কলেরা-বসন্ত দেখা দিলে, জমিতে মড়ক দেখা দিলে। \n\n মাদার পীর কোনো বাস্তব পীর নন। তার অস্তিত্ব কাল্পনিক, মারেফতি ধরনের। কিংবদন্তী আছে যে হারুত-মারুত নামের দুই ফেরেশতা একবার পৃথিবীতে আসেন জীবন পর্যবেক্ষণ করতে। তারা এসে এক সুন্দরী নারীর প্রেমে পতিত হন। তারা সেই নারীর প্রেমে এমনভাবে আসক্ত হয়ে পড়েন যে, ভুলেই যান তারা ফেরেশতা। তাদের প্রেমের ফলেই জন্ম হয় মাদার পীরের। তার জন্মের অব্যবহিত পরেই ফেরেশতারা খোদার ইচ্ছায় নিজেদের ভুলে যাওয়া সত্ত্বার কথা মনে করতে পারেন ফের। তারা এই দুনিয়া ত্যাগ করে চলে যান আসমানে তাদের নিবাসে ও কর্মক্ষেত্রে। একদিন হযরত আলী (রাঃ) শিকারে এসে কাপকুপের জঙ্গলে কুড়িয়ে পান শিশুকে। পুত্রের মতো লালন-পালন করেন। পরবর্তীতে মারফতি তরিকায় কঠোর সাধনা করে সিদ্ধিলাভ করেন মাদার পীর। এবং এসমে আজমের মাধ্যমে দম বা শুমার ধরে অনেক অসাধ্য সাধনের শক্তি অর্জন করেন। অর্জিত এই শক্তি বা মাহাত্ম মানবকল্যাণে লাগানোর জন্য তিনি ঘুরে বেরিয়েছেন দেশে-দেশান্তরে। তার এক-একটি কেরামতি নিয়ে এক-একটি পালা রচিত হয়েছে। এইরকম তার কয়েকটি পালার কথা জানা যায়। যেমন জিন্দাশাহ মাদার, আসকান মাদার, তালেমুল মাদার, খাতেমুল মাদার ইত্যাদি। এক এক পালায় এক এক নামে আবির্ভাব ঘটে শাহ মাদার পীরের। যেমন- ‘সমশের গোলাব’ পালায় রুহানী বা আধ্যাত্মিক শক্তি নিয়ে মাদার পীর পাল্লা দেন বড়পীর হযরত আবদুল কাদের জিলানী (রঃ)-র সাথে। রাজা ছিলছত্র একবার শিশু ইমাম হাসান ও ইমাম হোসেন (রঃ)-কে চুরি করে নিয়ে যায় তার দেশে। রাজা ছিলছত্রের দেশ হচ্ছে আরব মুলুক থেকে অনেক দূরে- সাত সমুদ্র তেরো নদীর ওপারে। হাসান-হোসেনকে মুক্ত করতে সেই দেশে যান মোহাম্মদ হানিফা। কিন্তু তিনিও বন্দী হন রাজা ছিলছত্রের সৈন্যদের হাতে। এই সংবাদে ক্রুদ্ধ হয়ে ছুটে যান মাদার পীর। তিনি বন্দী করেন রাজা ছিলছত্রকে। কিন্তু হাসান-হোসেনকে কোথায় বন্দী করে রেখেছে, তা কিছুৃতেই জানায় না রাজা ছিলছত্র। তখন মাদার পীর তার ঝোলার মধ্যে ভরে ছিলছত্রের গোটা রাজ্যটাই তুলে আনেন। তারপর মা ফাতেমা (রাঃ) এর সামনে এনে মেলে ধরেন ঝোলা এবং খুঁজে নিতে বলেন তাঁর পুত্রদের।  আর সব লোকগীতির মতো মাদার গানের আসর বসে খুব সাদাসিধেভাবে। সামিয়ানা টাঙিয়ে তার নিচে পাটি-সপ-মাদুর বিছিয়ে বসে এই গানের আসর। কলা-কুশলীর সংখ্যাও বেশি নয়। প্রধান চরিত্র দুইজন। মাদার পীর এবং তার শিষ্য জুমল শাহ। এছাড়া আছে কয়েকজন দোহার-বাইন। দোহার-বাইনরা জটলা করে বসে আসরের মাঝখানে। তাদের হাতে থাকে খঞ্জনি। তাদের চারপাশে বৃত্তাকারে ঘুরে ঘুরে গান গায় মাদার পীর ও জুমল শাহ। তাদের হাঁক-গানের সাথে ধূয়া ধরে দোহাররা। সওয়াল-জবাব-বিবৃতি সবকিছু করে মাদার জুমল দুইজনই। এদের পেছনে পেছনে গান-বাজনার তালে তালে নাচে নর্তকী। মাদার গানের নর্তকীর স্থানীয় নাম ছুকরি। ধুতি-শাড়ি-থান পরে পুরুষরাই ছুকরি সাজে এই গানে। দোহারদের বা জুমল শাহের জন্য অন্য কোনো সাজ-পোশাক নেই। শুধু মাদার পীরের জন্য প্রয়োজন হয় বিশেষ পোশাকের। তার পরনে থাকে অজানুলম্বিত আলখাল্লা, গলায় তসবিহ, মাথায় থাকে শিরস্ত্রাণ, হাতে আশা (লাঠি)।</string>
    <string name="monsar_gan">পদ্মপুরাণ বা মনসার গান ও ভাসানযাত্রা</string>
    <string name="monsar_gan_des">এই দুই পালার মধ্যে সাযুজ্য থাকলেও নাটোরের বিভিন্ন অঞ্চলভেদে কিছুটা পার্থক্য পরিলক্ষিত হয়।পদ্মপুরাণ নাটোর অঞ্চলের একটি উল্লেখযোগ্য কাব্য আলেখ্য। সাপের দেবী মনসা বা পদ্মার নাম অনুসারে এই নামকরণ। এই গান বর্ণনামূলক। স্থানীয় লোকবিশ্বাস এই যে প্রতি বছর মনসার গানের আয়োজন করলে সর্পাঘাতে পরিবারের কারো অকাল মৃত্যু ঘটবে না। মনসা পূজা উপলক্ষে গ্রামাঞ্চলে তো বটেই, শহরের কোনো কোনো বাড়িতে এখনো পদ্মপুরাণের আসর বসানো হয়। এটি নিতান্ত বর্ণনামূলক গান। সুতানাগের দংশনে লক্ষীন্দরের মৃত্যু থেকে শুরু করে আগাগোড়া বেহুলারই কাহিনী। প্রথম দিকে একটানা সাপের গীত আর সাপের বর্ণনা। নানা প্রকার ও নানা জাতের বাস্তব ও কাল্পনিক সাপের বর্ণনায় পূর্ণ এই গানের প্রথম অংশ। শেষে বর্ণনা করা হয় ভুরা বা ভেলা ভাসিয়ে বেহুলার ইন্দ্রপুরীতে গমন ও মৃত স্বামীর প্রাণ ফিরে পাওয়ার বর্ণনা।  অন্যদিকে ভাসান গান মূলত চলনবিল অঞ্চলের পদ্মপুরাণের একটি রূপান্তর। জনশ্রুতি আছে যে চাঁদ সওদাগরের সপ্তডিঙ্গা মধুকর যে কালীদহ সাগরে নিমজ্জিত হয়, চলনবিলই সেকালের সেই কালীদহ সাগর। ভাসান গানের মূল পর্ব বেহুলা আর লক্ষীন্দরের গীতগাথা হলেও এই কাহিনীর শাখা-প্রশাখা আছে অনেক। যেমন- ধন্মন্ত সওদাগর, শ্রীমন্ত সওদাগর, কুটিশ্ সওদাগর, কুটিশ্ সওদাগরের স্ত্রী কমলা সুন্দরী প্রভৃতি।</string>
    <string name="biyer_git">বিয়ের গীত</string>
    <string name="biyer_git_des">বিয়ের সময় নাটোরের গ্রামাঞ্চলে মেয়ে মহলে নৃত্য-গীতের প্রচলন খুবই বেশি।গ্রামাঞ্চলে বিয়ের গান এখনো স্বমহিমায় তার অস্তিত্ব বজায় রেখেছে। বিয়ের গীত শুরু হয় পাত্র ও কন্যাপক্ষের কথা পাকাপাকি হওয়ার সময় থেকে। চলতে থাকে বিবাহের সম্পূর্ণ অনুষ্ঠান শেষ না হওয়া পর্যন্ত। কখনো কখনো সাতদিন যাবৎ চলতে থাকে এই ধরনের অনুষ্ঠানমালা।বিবাহের তারিখের তিন দিন আগে বর ও কনের বাড়িতে প্রথমে \‘ঢেঁকিপূজা\’, তারপরের দিন \‘হেঁসেল পূজা\’ এবং পরের দিন ‘খরতাগা’ করা হয়। উল্লেখ্য হিন্দু-মুসলমান নির্বিশেষে বিয়ে বাড়িতে এই অনুষ্ঠানগুলি করা হয়। এখন হয়তো মুসলমান পরিবারে পূজা শব্দটি উচ্চারণ করা হয় না, কিন্তু সকল উপাচার পালন করা হয় সবিস্তারে।  নাটোরের বিয়ের অনুষ্ঠানের প্রতিটি পর্বে একাধিক নৃত্য-গীতের সমাহার দেখা যায়।খরতাগার দিন বর ও কনের দাদি, নানি, সম্পর্কিত ভাবীরা, জেলেনী ও মেথরানীর সাজে সঙ সেজে নাচে আর গীত গায়। জেলেনীর মাথায় থাকে মাছের ডালি, মেথরানীর মাথায় বালতি, কোমড়ে বাঁধা ঝাঁটা। \n বরযাত্রী এসে পড়লে বরের পাশে সবসময় বসে থাকে বরের ভগ্নিপতি স্থানীয় কেউ, যার সাথে ঠাট্টার সম্পর্ক চালু। স্থানীয় ভাষায় তাকে বরের \‘কোলদারা\’ বলা হয়।  এছাড়াও নাটোর জেলার সর্বত্র ছড়িয়ে আছে অসংখ্য মুর্শিদী গান, ধূয়া গান, বারমাসি গান, জারিগান, নৌকা বাইচের গান, লোককাহিনী, মুখা খেলা, বিচ্ছেদ গান, টপ্পা গান, কবি গান, যোগীর গান, হাপু গানসহ লোকজ সংস্কৃতির বিভিন্ন উপাদান। কিছু কিছু বিলুপ্ত হয়ে গেছে। কিছু কিছু দ্রুত বিলীয়মান। সেগুলি সম্পূর্ণরূপে সংগ্রহ ও সংরক্ষণের জন্য প্রয়োজন ব্যাপক ও ধারাবাহিক কর্মযজ্ঞ। আমাদের সার্বিক সাংস্কৃতিক জাগরণ ও মুক্তির লক্ষ্যে এই লোকজ সংস্কৃতি পালন করতে পারে প্রভাবকের ভূমিকা। শুধু সেই কারণে হলেও আমাদের অগ্রসর হতে হবে লোকজ সংস্কৃতির যাবতীয় উপাদানের সংগ্রহে ও সংরক্ষণে।  লোকসংস্কৃতির অন্তর্গত পালা-গান-নৃত্য-খেলা প্রভৃতি শুধু লিখিতভাবে সংগ্রহ করলে তা অনেকটা মূল্যহীন হবে। কেননা লিখিতভাবে শুধু বাণীগুলিকে সংরক্ষণ করা সম্ভব।এইসব গীতের কোনো স্বরলিপি না থাকায় শুধু বাণী থেকে সুর করা অসম্ভব। তাই সংরক্ষণের জন্য লিখিত পান্ডুলিপির পাশাপাশি অডিও-ভিজুয়াল মাধ্যম ব্যবহার করতে হবে।</string>
    <string name="are_you_want_to_call_emergency">Are you want to call Emergency?</string>
    <string name="yes">Yes</string>
    <string name="no">no</string>
    <string name="imp_phn_call">গুরুত্বপূর্ণ ফোন কল</string>
</resources>