<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCEDC8"
    tools:context="com.kpsoftwaresolutions.amadernatoreapp.activities.LanguageCultureActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5910423341335020/5841521955"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">
    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/adView">

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:typeface="serif"
                android:textColor="#030a01"
                android:padding="10dp"
                android:text="@string/language1"
                android:textSize="20sp"
                android:textStyle="normal"/>

            <TextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:typeface="serif"
                android:textColor="#030a01"
                android:padding="10dp"
                android:text="@string/madar_gan"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_below="@+id/tv1"/>

            <TextView
                android:id="@+id/tv3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:typeface="serif"
                android:textColor="#030a01"
                android:padding="10dp"
                android:text="@string/madar_gan_des"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_below="@+id/tv2"/>

            <TextView
                android:id="@+id/tv4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:typeface="serif"
                android:textColor="#030a01"
                android:padding="10dp"
                android:text="@string/monsar_gan"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_below="@+id/tv3"/>

            <TextView
                android:id="@+id/tv5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:typeface="serif"
                android:textColor="#030a01"
                android:padding="10dp"
                android:text="@string/monsar_gan_des"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_below="@+id/tv4"/>

            <TextView
                android:id="@+id/tv6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:typeface="serif"
                android:textColor="#030a01"
                android:padding="10dp"
                android:text="@string/biyer_git"
                android:textSize="22sp"
                android:textStyle="bold"
                android:layout_below="@+id/tv5"/>

            <TextView
                android:id="@+id/tv7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:typeface="serif"
                android:textColor="#030a01"
                android:padding="10dp"
                android:text="@string/biyer_git_des"
                android:textSize="20sp"
                android:textStyle="normal"
                android:layout_below="@+id/tv6"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
