<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCEDC8"
    tools:context="com.kpsoftwaresolutions.amadernatoreapp.fragments.AboutDistrictFragment">

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5910423341335020/5841521955"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">
    </com.google.android.gms.ads.AdView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:layout_above="@id/adView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jelar_potovumi"
                android:textSize="20sp"
                android:id="@+id/txtvw1"
                android:textColor="#000000"
                android:background="@drawable/bg_txtvw_main"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upojela_o_union"
                android:id="@+id/txtvw2"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_txtvw_main"
                android:textSize="20sp"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jela_proshashoker_barta"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_txtvw_main"
                android:textStyle="bold"
                android:gravity="center"
                android:id="@+id/txtvw3"
                android:padding="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tourist_place"
                android:textSize="20sp"
                android:id="@+id/txtvw4"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_txtvw_main"
                android:textColor="#000000"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lang_and_culture"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_txtvw_main"
                android:id="@+id/txtvw5"
                android:textColor="#000000"
                android:gravity="center"
                android:padding="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/famous_persons"
                android:textSize="20sp"
                android:id="@+id/txtvw6"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_txtvw_main"
                android:textColor="#000000"
                android:gravity="center"
                android:padding="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/natore_in_war"
                android:textColor="#000000"
                android:textSize="20sp"
                android:id="@+id/txtvw7"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_txtvw_main"
                android:textStyle="bold"
                android:gravity="center"
                android:padding="20dp"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
