<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DCEDC8"
    tools:context="com.kpsoftwaresolutions.amadernatoreapp.fragments.CallFragment">

    <ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginBottom="100dp"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/are_you_want_to_call_emergency"
                    android:textSize="20sp"
                    android:typeface="serif"
                    android:textStyle="bold"
                    android:paddingLeft="10dp"
                    android:gravity="center"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:text="@string/no"
                        android:textStyle="bold"
                        android:typeface="serif"
                        android:layout_gravity="center"
                        android:textSize="16sp"
                        android:textColor="#f30d02"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button1" />

                    <Button
                        android:text="@string/yes"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:typeface="serif"
                        android:textSize="16sp"
                        android:textColor="#0f852d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/button2"
                        android:layout_marginStart="50dp"
                        android:layout_marginLeft="50dp" />

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5910423341335020/5841521955"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>
